service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mogul-mvp-be-admin
  name: mogul-mvp-be-admin-svc
  namespace: mogul-dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5001
  selector:
    app: mogul-mvp-be-admin
